--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>URL Shortener Microservice | freeCodeCamp.org</title>
+    <title>URL Shortener Microservice</title>
     <link
       rel="icon"
       type="image/png"
@@ -26,7 +26,7 @@
       </section>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>&copy;<a href="https://github.com/qurriahSam">Sam Kuria</a></p>
     </footer>
   </body>
 </html>
